--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,14 @@
       <version>5.1.29</version>
       <scope>test</scope>
     </dependency>
+
+    <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>28.1-jre</version>
+    </dependency>
+
   </dependencies>
 
   <build>
